🚑 Fix : Lv1-5 Fix JPQL(2) - 날짜에 공백을 입력했을 경우, NPE가 발생하므로 StringUtils.isBlank() 사용